data/derived/sp14/progs/unify/prog4576.ml.out
Characters 129-134:
  let seen' = if List.mem(h,seen) = false then seen@ [h]  in
                                    ^^^^^
Error: This expression has type bool but an expression was expected of type
         ('a * 'b) list -> bool
